@@ -1,6 +1,7 @@
 == 2.7.20 ==
 Release date: May 29, 2024
 * Fixed: Info Grid & Carousel - Pause on Hover option was not working
+* Fixed: Info Grid & Carousel - Equal Height option for Coverflow effect
 * Security Fix: Animated Gradient Background - Improved code security
 
 == 2.7.19 ==
